<resources>
    <string name="app_name">FamilyMap</string>

    <!-- login fragment -->
    <string name="ip_address">Server Host:</string>
    <string name="server_port_number_login">Port Number:</string>
    <string name="username_login">Username:</string>
    <string name="password_login">Password:</string>
    <string name="first_name_login">First Name:</string>
    <string name="last_name_login">Last Name:</string>
    <string name="email_login">Email:</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>
    <string name="invalid_parameters">Please enter all information!</string>

    <string name="map_fragment_welcome">Welcome to FamilyMap!</string>
    <string name="map_fragment_default">Click on any marker to begin</string>

    <string name="settings_story_lines">Show Life Story</string>
    <string name="settings_show_story_lines">SHOW LIFE STORY LINES</string>
    <string name="settings_tree_lines">Family Tree Lines</string>
    <string name="settings_show_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="settings_spouse_lines">Spouse Lines</string>
    <string name="settings_show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="settings_map_type">Map Type</string>
    <string name="settings_map_type_info">BACKGROUND DISPLAY ON MAP</string>
    <string name="settings_resync">Re-sync Data</string>
    <string name="settings_resync_info">FROM FAMILYMAP SERVICE</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_info">RETURNS TO LOGIN SCREEN</string>
    <string-array name="life_story_colors">
        <item>Blue</item>
        <item>Cyan</item>
        <item>Black</item>
    </string-array>
    <string-array name="family_tree_colors">
        <item>Green</item>
        <item>Yellow</item>
        <item>White</item>
    </string-array>
    <string-array name="spouse_line_color">
        <item>Magenta</item>
        <item>Red</item>
        <item>Grey</item>
    </string-array>
    <string-array name="map_types">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

    <string name="male_events">Male Events</string>
    <string name="gender_events_description">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="filter_default">Filter Setting</string>
    <string name="filter_default_des">Filter Description</string>
    <string name="father_filter">Father\'s Side</string>
    <string name="father_filter_des">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_filter">Mother\'s Side</string>
    <string name="mother_filter_des">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="search_string">Search</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_person">PersonActivity</string>


    <!-- TODO: Remove or change this placeholder text -->


</resources>
